2006-05-17  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchPaintScreen): Don't remove switcher
	from window list, just temporarily mark it as destroyed. This fixes
	issue with switcher decorations disappearing when some window is
	unmapped.

	* src/screen.c (updateDefaultIcon): width and height should be
	unsigned.

	* gnome/window-decorator/gnome-window-decorator.c: Add minimal
	option that can be used to run g-w-d with drop-shadows but without full
	window decorations.

	* plugins/minimize.c (minHandleEvent): Restore window position
	when transitioning to withdrawn state.

	* plugins/scale.c: Remove next_window binding and fix so that arrow
	keys can be used to select window.
	Focus new window when pointer enter window decorations and sloppy focus
	is used.
	Remove scaleSelectWindow.

	* plugins/scale.c: Icon support (Nat Friedman).

2006-05-17  Dan Winship  <danw@novell.com>

	* src/display.c (handleSelectionClear, eventLoop): don't process
	exit-on-selection-clear until the event queue is empty, or else
	MapRequest and ConfigureRequest events could get lost. bnc 175558

2006-05-14  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent): mapNum might be 0 if we found the window
	unmapped when trying to bind it to a texture.

2006-05-12  David Reveman  <davidr@novell.com>

	* src/screen.c (enterShowDesktopMode): Only go into show desktop mode
	when some window is being hidden.

	* src/event.c (handleWindowDamageRect): Make sure placed is set to true
	when no plugin is doing placement.
	(handleEvent): Don't set WM_STATE on override redirect windows.

	* plugins/switcher.c (isSwitchWin): Don't show windows that ask not to
	be in tasklists.

	* plugins/rotate.c (rotateHandleEvent): Only adjust viewport if window
	has been placed.

	* plugins/minimize.c (minHandleEvent): Reset everything when going
	into withdrawn state.

	* src/window.c (moveResizeWindow): Handle west and north gravity
	correctly.
